# mental_health_data_science

./: README.md  app.py  pyproject.toml
data/raw/: 608DE39_ALL_LATEST.csv  raw_data.py
notebooks/: analyse.ipynb
scripts/: pipeline.py
