[tool.poetry]
name = "data-science-project"
version = "0.1.0"
description = ""
authors = ["Roberta Aguilar <roberta_rfa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
streamlit = "^1.40.2"
tabula-py = "^2.10.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
